# DL_OPS_PROJECT_CICD

./: .dockerignore  .gitignore  main.py  pyproject.toml  template.py
.github/workflows/: docker-ci.yml
src/cnnClassifier/config/: configuration.py
